--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
+    "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.8.3",
     "@tailwindcss/forms": "^0.3.4",
     "@testing-library/jest-dom": "^5.14.1",
