--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hook-form": "^7.19.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
+    "react-toastify": "^9.0.1",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
